--- a/team.html
+++ b/team.html
@@ -17,8 +17,8 @@
                     <p><i class="fas fa-key"></i>   Key Conservation</p>
                     <nav>
                     
-                        <a href="https://amazing-kalam-078c9e.netlify.com/">Home</a>
-                        <a href="team.html">Meet the Team</a>
+                        <a href="https://key-conservation-campaigns.netlify.com/index.html">Home</a>
+                        <a href="https://key-conservation-campaigns.netlify.com/team.html">Meet the Team</a>
                         <a href="https://frontend-vert-kappa.now.sh/register">Register</a>
                         <a href="https://frontend-vert-kappa.now.sh/login">Log In</a>
                     </nav>
@@ -53,8 +53,8 @@
         </div>
         <footer>
             <nav>
-                <a href="https://amazing-kalam-078c9e.netlify.com/">Home</a>
-                <a href="team.html">Meet the Team</a>
+                <a href="https://key-conservation-campaigns.netlify.com/index.html">Home</a>
+                <a href="https://key-conservation-campaigns.netlify.com/team.html">Meet the Team</a>
                 <a href="https://frontend-vert-kappa.now.sh/register">Register</a>
                 <a href="https://frontend-vert-kappa.now.sh/login">Log In</a>
             </nav>
