edited call to action link

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             
                 <p class="start">
                     <i class="fas fa-seedling"></i>
-                    <a href=#>START A CAMPAIGN</a>
+                    <a href="https://frontend-vert-kappa.now.sh/register">START A CAMPAIGN</a>
                 </p>
                 <br><br>
             </div>
